# weft

./: .gitignore  .graphifyignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GOVERNANCE.md  LICENSE-MIT  LIMITATIONS.md  PHASE_4B_REPORT.md  PHASE_4_COMPLETE.md  PROJECT_NOTES.md  README.md  REVIEW_FINDINGS.md  ROADMAP.md  SECURITY.md  VERSIONING.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  pages.yml
crates/weft-abi/: Cargo.toml
crates/weft-abi/src/: lib.rs
crates/weft-chord/: Cargo.toml
crates/weft-chord/src/: chord_model.rs  lib.rs
crates/weft-dst/: Cargo.toml
crates/weft-dst/src/: fuzz_cmd.rs  lib.rs  main.rs  orchestrator.rs  replay_cmd.rs  run.rs  run_cmd.rs
crates/weft-dst/tests/: e2e.rs  net_e2e.rs  orchestration.rs  sched_e2e.rs
crates/weft-fuzz/: Cargo.toml
crates/weft-fuzz/src/: config.rs  fuzz.rs  gen.rs  input.rs  lib.rs  shrink.rs
crates/weft-fuzz/tests/: fuzz_e2e.rs  shrink_ground_truth.rs
crates/weft-net/: Cargo.toml
crates/weft-net/src/: broker.rs  config.rs  core.rs  fault.rs  lib.rs  window.rs  wire.rs
crates/weft-net/tests/: broker_integration.rs  broker_windowed.rs
crates/weft-raft/: Cargo.toml
crates/weft-raft/src/: lib.rs  raft_model.rs
crates/weft-replay/: Cargo.toml
crates/weft-replay/examples/: demo_violation.rs
crates/weft-replay/src/: hash.rs  invariant.rs  lib.rs  log.rs  recorder.rs  replay.rs  report.rs
crates/weft-replay/tests/: gzip.rs  record_replay.rs
crates/weft-scenario/: Cargo.toml
crates/weft-scenario/src/: latency.rs  lib.rs  parse.rs
crates/weft-scenario/tests/: parser_robustness.rs  scenario_parser.rs
crates/weft-shim/: Cargo.toml
crates/weft-shim/src/: lib.rs  real.rs  rng.rs  state.rs  trace.rs  vclock.rs
crates/weft-shim/src/hooks/: aux.rs  dev.rs  file.rs  mod.rs  rand.rs  socket.rs  thread.rs  time.rs
crates/weft-shim/src/sched/: guard.rs  mod.rs
crates/weft-shim/tests/: hooks_threaded.rs  sched_harness.rs
docs/: MULTI_HOST_ARCHITECTURE.md  MULTI_HOST_CLOCK_PROTOCOL.md  PHASE_VERIFICATION.md  REFERENCE.md  RELEASE.md  SCALABILITY.md  SCALABILITY_RECOMMENDATIONS.md  USER_GUIDE.md  architecture.md  comparison.md  fault-model.md  fuzzing.md  logical-time-model.md  network-model.md  process-orchestration.md  recording-format.md  scheduling-model.md
docs-site/: book.toml
docs-site/src/: SUMMARY.md  comparison.md  development.md  fault-model.md  fuzzing.md  install.md  limitations.md  logical-time-model.md  multi-host-architecture.md  multi-host-clock-protocol.md  network-model.md  process-orchestration.md  recording-format.md  reference.md  review-findings.md  scalability-recommendations.md  scalability.md  scheduling-model.md  user-guide.md  versioning.md
docs-site/src/case-study/: chord-spec.md  credibility-summary.md  formal-cross-validation.md  level-2-results.md  raft-validation.md  target-selection.md
docs/case-study/: CREDIBILITY_SUMMARY.md  FORMAL_CROSS_VALIDATION.md  LEVEL_2_RESULTS.md  PROGRESS.md  RAFT_VALIDATION.md  chord-spec.md  target-selection.md
docs/history/: PHASE_4_SESSION_SUMMARY.md
drafts/: blog-chord-raft-case-study.md  outreach-draft.md
examples/: chrono.c  crash_now.c  deadlock.c  deadlock_recv.c  entropy.c  kvreplica.c  montecarlo.c  netsched.c  pingpong.c  prodcons.c  race_bank.c  spam_send.c  thread_churn.c  udpbench.c
examples/chord/: campaign.sh  chord_node.c
examples/fuzz/: ci.json  demo.json
examples/raft/: campaign.sh  raft_node.c
examples/scenarios/: crash-and-restart.json  file-sync-network-reordering.json  network-reordering.json
sbom/: weft-sbom.cdx.json  weft-sbom.spdx.json
scripts/: bench-net.sh  bench-overhead.sh  bench-scalability.sh  chord-campaign.sh  linux-test.sh  raft-campaign.sh  verify-phases.sh
