[workspace]
resolver = "2"
members = ["crates/weft-dst", "crates/weft-abi", "crates/weft-shim", "crates/weft-net", "crates/weft-scenario", "crates/weft-replay", "crates/weft-fuzz", "crates/weft-chord", "crates/weft-raft"]

[workspace.dependencies]
weft-abi = { path = "crates/weft-abi", version = "0.0.1" }
weft-net = { path = "crates/weft-net", version = "0.0.1" }
weft-scenario = { path = "crates/weft-scenario", version = "0.0.1" }
weft-replay = { path = "crates/weft-replay", version = "0.0.1" }
weft-fuzz = { path = "crates/weft-fuzz", version = "0.0.1" }
libc = "0.2"
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arnavsinghal09/weft"
authors = ["Weft contributors"]

[workspace.lints.rust]
unsafe_code = "allow" # interception shim is unavoidably unsafe; each use must carry a SAFETY comment

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
# Doc comments here are full of algorithm names (ChaCha8, SplitMix64,
# PractRand) that are prose, not code items; the lint is all noise for us.
doc_markdown = "allow"

[profile.release]
debug = true # keep symbols: replay/trace tooling needs them
