# Seed-sweeping fuzz loop and log shrinking (Phase 6).
# Runs in the `weft` CLI process only — never inside target processes.
[package]
name = "weft-fuzz"
description = "Seed fuzzing and failure shrinking for Weft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
weft-abi = { workspace = true }
weft-net = { workspace = true }
weft-replay = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
