# Recording, deterministic replay, and invariant checking (Phase 5).
# Runs in the `weft` CLI / broker process only — never inside target
# processes — so unlike weft-shim it is free to use serde and allocate.
[package]
name = "weft-replay"
description = "Event-log recording, deterministic replay, and invariant checking for Weft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
weft-net = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }

[lints]
workspace = true
